# CourtPulse

landing-page/: README.md  images.d.ts  package.json  tailwind.config.js  tsconfig.json
landing-page/components/: DarkSwitch.js  benefits.js  container.js  cta.js  data.js  faq.js  footer.js  hero.js  navbar.js  popupWidget.js  sectionTitle.js  simpleFooter.js  testimonials.js  video.js
landing-page/components/ui-components/: button.tsx  hamburger.tsx  index.tsx  menu.tsx  see-more.tsx
landing-page/constants/: bots.ts  contentStrings.ts
landing-page/css/: tailwind.css
landing-page/pages/: _app.js  index.js
telegram-court-notifier/: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  metadata.txt  pyproject.toml
telegram-court-notifier/app/bots/: __init__.py  delhi_high_court_bot.py  supreme_court_bot.py
telegram-court-notifier/app/config/: message_strings.py  settings.py
telegram-court-notifier/app/core/: base_bot.py  utils.py
telegram-court-notifier/bots/: supreme_court_bot.py
telegram-court-notifier/config/: message_strings.py  settings.py
telegram-court-notifier/core/: base_bot.py
