[tool.poetry]
name = "court-pulse"
version = "1.0.1a1"
description = ""
authors = ["Joshua <joshuanazareth97@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {extras = ["job-queue"], version = "^21.1.1"}
requests = "^2.31.0"
redis = "^5.0.3"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
